# pdf-ai-reader

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs
src/app/: AppShell.tsx  types.ts
src/features/chat/: ChatPanel.tsx  aiClient.ts
src/features/explorer/: FileTree.tsx
src/features/pdf/: PdfViewer.tsx  pdfContextExtractor.ts
src/features/settings/: ProviderSettings.tsx
src/styles/: app.css
