[package]
name = "pdf-ai-reader"
version = "0.1.0"
description = "VSCode style PDF AI Reader"
authors = ["you"]
edition = "2021"

[lib]
name = "pdf_ai_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-store = "2.0.0"
walkdir = "2.5.0"
